# cbt-protocol-foundry

./: .gitignore  README.md  docker-compose.yml
backend/: Dockerfile  cerina.db  env.example  pyproject.toml
backend/app/: __init__.py  config.py  main.py  mcp_server.py
backend/app/agents/: __init__.py  clinical_critic.py  drafter.py  finalize.py  human_gate.py  prompts.py  safety_guardian.py  supervisor.py
backend/app/api/: __init__.py  routes.py
backend/app/db/: __init__.py  database.py
backend/app/graph/: __init__.py  workflow.py
backend/app/models/: __init__.py  session.py  state.py
backend/app/services/: __init__.py  session_service.py
evals/: README.md  cases.jsonl  ragas_harness.py
frontend/: Dockerfile  index.html  package-lock.json  package.json  tailwind.config.js
frontend/src/: App.tsx  index.css
frontend/src/components/: AgentGraph.tsx  IntentInput.tsx  Layout.tsx  LiveStreamPanel.tsx  ReviewModal.tsx  StateInspector.tsx
frontend/src/components/ui/: badge.tsx  button.tsx  card.tsx  dialog.tsx  input.tsx  scroll-area.tsx  textarea.tsx  toaster.tsx
frontend/src/hooks/: useTheme.ts
frontend/src/lib/: api.ts  utils.ts
frontend/src/pages/: Dashboard.tsx  History.tsx  ReviewPending.tsx  SessionDetail.tsx
frontend/src/store/: sessionStore.ts
specs/: 00-vision.txt  01-features.md  02-screens.md  03-tech-data.md  04-build-plan.md
